--- a/src/assets/css/_utilities.scss
+++ b/src/assets/css/_utilities.scss
@@ -18,6 +18,7 @@ div.btn.setup {
   margin-right: 4px;
   opacity: 0.6;
   transition: opacity $transition-base;
+  filter: var(--icon-filter);
 
   &:hover {
     opacity: 1;
@@ -35,6 +36,7 @@ div.btn.setup {
   background-size: 16px;
   background-repeat: no-repeat;
   transition: opacity $transition-base;
+  filter: var(--icon-filter);
 
   &:hover {
     opacity: 1;
